--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack",
+    "prod": "NODE_ENV=production yarn run build",
     "dev": "NODE_ENV=development yarn run build",
-    "prod": "NODE_ENV=production yarn run build"
+    "watch": "NODE_ENV=development webpack --watch",
+    "hot": "NODE_ENV=development PORT=3000 node serve.js"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^8.0.0",
@@ -15,6 +17,8 @@
     "html-webpack-plugin": "^5.3.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.27.1",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2",
+    "write-file-webpack-plugin": "^4.5.1"
   }
 }
