--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,16 +1,20 @@
 {
-  "name": "Reloader",
-  "options_page": "options.html",
+  "name": "Flush",
+  "manifest_version": 3,
   "background": {
-    "page": "background.html"
+    "service_worker": "background.js"
   },
-  "browser_action": {
+  "permissions": ["storage", "activeTab", "scripting"],
+  "action": {
     "default_popup": "popup.html",
-    "default_icon": "icon-34.png"
+    "default_icon": {
+      "34": "icon-34.png",
+      "128": "icon-128.png"
+    }
   },
   "icons": {
-    "128": "icon-128.png"
+      "34": "icon-34.png",
+      "128": "icon-128.png"
   },
-  "manifest_version": 2,
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+  "options_page": "options.html"
 }
